--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.1",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "tailwindcss": "^2.2.7"
   }
 }
